Address miscellaneous style guide issues in AsyncPDFRenderer https://bugs.webkit.org/show_bug.cgi?id=293656 rdar://152122237

Reviewed by Aditya Keerthi, Tim Horton, and Megan Gardner.

Fix some violations of "Non-C++ pointer types should be written with a
space between the type and the `*`",
c.f. https://www.webkit.org/code-style-guidelines/#pointers-non-cpp.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.mm:
(WebKit::renderPDFTile):
(WebKit::renderPDFTileToImage):
(WebKit::renderPDFTileToDynamicContentScalingDisplayList):
(WebKit::AsyncPDFRenderer::serviceRequestQueues):
(WebKit::operator<<):
(WebKit::AsyncPDFRenderer::dynamicContentScalingResourceCache): Deleted.
Drive-by fix: Rename with an `ensure` prefix to make the single
initialization intent clearer.

Canonical link: https://commits.webkit.org/295481@main